# monigram

./: .gitignore  README.md  config.py  main.py  pyproject.toml
docker/: .env  docker_compose.yml  monigram.docker
splunk_monigram_app/default/: app.conf
splunk_monigram_app/local/: indexes.conf  inputs.conf
splunk_monigram_app/local/data/ui/views/: monigram.xml
